Fixes "formerly CP" spacing once and for all (hopefully)

--- a/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
+++ b/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
@@ -82,7 +82,7 @@
   #formerly-cp
     vertical-align: text-top
     display: none
-    padding: 0 1.5em
+    padding-right: 1.5em
 
     img
       width: 100px
